# bazel-llvm-cgo-cross-compile-example

./: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE  com_github_confluentinc_confluent_kafka_go.patch  com_github_confluentinc_confluent_kafka_go_vendor.patch  com_grail_bazel_toolchain_m1.patch  go.mod  main.go
